# AI-Anthropology-Toolkit

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  GEMINI.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.gemini/: settings.json
.github/workflows/: validate.yml
agents/: analysis-advisor.md  career-advisor.md  dissemination-advisor.md  ethics-reviewer.md  fieldwork-advisor.md  proposal-advisor.md  research-design.md  writing-advisor.md
commands/: new-project.md  skills.md
notebooks/: Academic_Literature_Explorer.ipynb  Audio_Transcription_Whisper.ipynb  BLS_Labor_Statistics_Explorer.ipynb  Coding_and_Thematic_Analysis.ipynb  CrossRef_Reference_Verifier.ipynb  Google_Books_Ngram_Explorer.ipynb  Google_News_Explorer.ipynb  Google_Patents_Explorer.ipynb  Google_Scholar_Explorer.ipynb  Google_Search_Questions_Explorer.ipynb  Google_Trends_Explorer.ipynb  Interview_Transcript_Semantic_Chunker.ipynb  Multimodal_Embedding_Explorer.ipynb  Named_Entity_Recognition_GLiNER2.ipynb  Podcast_RSS_Explorer.ipynb  PubMed_Literature_Harvester.ipynb  Qualitative_Codebook_Builder.ipynb  Text_Network_Analysis.ipynb  Topic_Modeling_BERTopic.ipynb  UN_Data_Explorer.ipynb  Visual_Analysis_Image_Annotation.ipynb  World_Bank_Data_Explorer.ipynb  YouTube_Transcript_Fetcher.ipynb  YouTube_Video_Search.ipynb
skills/: DESIGN.md  README.md
skills/academic-review/: SKILL.md
skills/applied-practice/: SKILL.md
skills/applied-practice/references/: deliverables-guide.md  (+2 more)
skills/career-statements/: SKILL.md
skills/conference-materials/: SKILL.md
skills/digital-computational-methods/: SKILL.md
skills/dissertation-prospectus/: SKILL.md
skills/fieldwork-methods/: SKILL.md
skills/grant-proposal/: SKILL.md
skills/informed-consent/: SKILL.md
skills/irb-protocol/: SKILL.md
skills/job-materials/: SKILL.md
skills/literature-review/: SKILL.md
skills/methodology-selection/: SKILL.md
skills/public-engagement/: SKILL.md
skills/qualitative-analysis/: SKILL.md
skills/research-plan/: SKILL.md
skills/research-question/: SKILL.md
skills/research-writing/: SKILL.md
skills/teaching-materials/: SKILL.md
src/ai_anthro_toolkit/: __init__.py  catalog.py  chunking.py  codebook.py  coding.py  crosslens.py  doctor.py  jobs.py  lenses.py  llm.py  models.py  themes.py
tests/: test_repo.py  test_skill_routing.py
tests/package/: test_chunking.py  test_codebook.py  test_coding.py  test_consistency.py  test_datasources_collectors.py  test_datasources_scrapers.py  test_datasources_youtube.py  test_doctor.py  test_package.py  test_server_pipeline.py
(+65 files in other folders)
