[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-anthropology-toolkit"
version = "2.0.0.dev0"
description = "Computational tools for anthropological and qualitative research: data collection and analysis as an MCP server and Python package"
readme = "README.md"
requires-python = ">=3.10"
# License decision pending (CC BY-NC covers the repo's content; a code
# license — PolyForm-Noncommercial or MIT — is to be chosen before PyPI publish).
license = "CC-BY-NC-4.0"
authors = [{ name = "Matt Artz" }]
keywords = ["anthropology", "qualitative-research", "ethnography", "mcp"]
dependencies = [
    "mcp>=1.2",
    "requests>=2.31",
    "numpy>=1.26",
]

[project.optional-dependencies]
chunking = ["nltk>=3.8,<4", "sentence-transformers>=3,<6"]
test = ["pandas>=2.0"]

[project.scripts]
ai-anthro-mcp = "ai_anthro_toolkit.mcp.server:main"

[project.urls]
Homepage = "https://github.com/MattArtzAnthro/AI-Anthropology-Toolkit"
Repository = "https://github.com/MattArtzAnthro/AI-Anthropology-Toolkit"
Issues = "https://github.com/MattArtzAnthro/AI-Anthropology-Toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]
