[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-anthropology-toolkit"
version = "2.2.1"
description = "Computational tools for anthropological and qualitative research: data collection and analysis as an MCP server and Python package"
readme = "README.md"
requires-python = ">=3.10"
# The entire repository is licensed under PolyForm Noncommercial 1.0.0;
# commercial licensing by arrangement.
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Matt Artz" }]
keywords = ["anthropology", "qualitative-research", "ethnography", "mcp"]
dependencies = [
    "mcp>=1.2",
    "requests>=2.31",
    "numpy>=1.26",
]

[project.optional-dependencies]
chunking = ["nltk>=3.8,<4", "sentence-transformers>=3,<6"]
data = [
    "feedparser>=6",
    "gnews>=0.3",
    "pytrends>=4.9",
    "scholarly>=1.7",
    "scrapetube>=2.5",
    "youtube-transcript-api>=1.0",
]
test = ["pandas>=2.0"]

[project.scripts]
ai-anthro-mcp = "ai_anthro_toolkit.mcp.server:main"
ai-anthro-doctor = "ai_anthro_toolkit.doctor:main"

[project.urls]
Homepage = "https://github.com/MattArtzAnthro/AI-Anthropology-Toolkit"
Repository = "https://github.com/MattArtzAnthro/AI-Anthropology-Toolkit"
Issues = "https://github.com/MattArtzAnthro/AI-Anthropology-Toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]
